--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
 language: python
 
-os:
-  - linux
-  - osx
-
 matrix:
   include:
-  - python: 2.7
-  - python: 3.6
+  - os: linux
+    python: 2.7
+  - os: linux
+    python: 3.6
+  - os: osx
+    python: 2.7
+  - os: osx
+    python: 3.6
+
 #  - python: 3.7
 #    sudo: required
 #    dist: xenial
