--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,10 @@ matrix:
     python: 2.7
   - os: linux
     python: 3.6
-  - os: osx
-    python: 2.7
-  - os: osx
-    python: 3.6
-
-#  - python: 3.7
-#    sudo: required
-#    dist: xenial
-
-#before_install:
+#  - os: osx
+#    python: 2.7
+#  - os: osx
+#    python: 3.6
 
 install:
   - pip install -r requirements.txt
